--- a/styles/main.css
+++ b/styles/main.css
@@ -73,8 +73,12 @@ html {
     margin: 0 auto;
     max-width: 64rem;
 }
- 
- /* Medium and small screens (640px) */
+
+.container.narrow {
+    max-width: 56rem;
+}
+
+/* Medium and small screens (640px) */
  @media (min-width: 640px) {
      html { font-size: 112% }
    /* Style information will go here */
