--- a/styles/main.css
+++ b/styles/main.css
@@ -103,3 +103,12 @@ html {
    /* Style information will go here */
  }
 
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
+}
